WTForms Changelog
=================

Version 0.4
-----------
Not yet released.

- Fields now use widgets for rendering.

- There is now a Validator base class, and all built-in validators have been
  refactored into classes. This is now the preferred way of writing validators.
  Validator callables are still supported for simple validators however.


Version 0.3.1
-------------
Released January 24th, 2009.

- Several fixes were made to the code and tests to make WTForms compatible
  with Python 2.3/2.4.

- Form's properties can now be accessed via dictionary-style access such as
  `form['author']`. This also has the intended effect of making variable
  lookups in Django templates more reliable.

- Form and Field construction changes: Form now uses a metaclass to handle
  creating its `_unbound_fields` property, and Field construction now gives an
  instance of the new `UnboundField` class instead of using a partial function
  application.  These are both internal changes and do not change the API.


Version 0.3
-----------
Released January 18th, 2009.

- Validation overhaul: Fields are now responsible for their own validation,
  instead of mostly relying on Form. There are also new pre_validate and
  post_validate hooks on subfields, adding a great deal of flexibility when
  dealing with field-level validation. Note that this is an API breaking change
  if you have any subfields that override `Field.validate`. These will need to
  be updated to use the new hooks.
 
- Changes in how `process_data` and `process_formdata` are called: 
    * `process_data` no longer accepts the `has_formdata` parameter.
    * At form instantiation time, `process_data` will be called only once for
      each field. If a model object is provided which contains the property,
      then this value is used. Otherwise, a keyword argument if specified is 
      used. Failing that, the field's default value is used.
    * If any form data is sent, `process_formdata` will be called after